# coding-challenges

./: CMakeLists.txt
Algorithms/: ALG0001-Heap.cpp  ALG0002-QuickSelect.cpp  CMakeLists.txt  X-SortingAlgorithms.cpp
Array/: LC0003-LongestSubstringWithoutRepeatingCharacters.cpp  LC0005-LongestPalindromicSubstring.cpp  LC0012-IntegerToRoman.cpp  LC0015-3Sum.cpp  LC0026-RemoveDuplicatesfromSortedArray.cpp  LC0031-NextPermutation.cpp  LC0033-SearchInRotatedSortedArray.cpp  LC0036-ValidSudoku.cpp  LC0046-Permutations.cpp  LC0048-RotateImage.cpp  LC0050-Power.cpp  LC0053-MaxSubarray.cpp  LC0054-SpiralMatrix.cpp  LC0056-MergeIntervals.cpp  LC0057-InsertInterval.cpp  LC0069-SqrtX.cpp  LC0073-SetMatrixZeros.cpp  LC0074-SearchIn2DMatrix.cpp  LC0075-SortColors.cpp  LC0076-MinimumWindowSubstring.cpp  LC0085-PlusOne.cpp  LC0088-MergeSortedArray.cpp  LC0118-PascalsTriangle.cpp  LC0121-BestTimeToBuyAndSellStock.cpp  LC0125-ValidPalindrome.cpp  LC0128-LongestConsecutiveSequence.cpp  LC0153-FindMinimumInRotatedSortedArray.cpp  LC0167-TwoSumIIinputArrayIsSorted.cpp  LC0169-MajorityElement.cpp  LC0189-RotateArray.cpp  LC0219-ContainsDuplicateII.cpp  LC0229-MajorityElementII.cpp  LC0238-ProductOfArrayExceptSelf.cpp  LC0242-ValidAnagram.cpp  LC0268-MissingNumber.cpp  LC0287-FindTheDuplicateNumber.cpp  LC0347-TopKFrequentElements.cpp  LC0349-IntersectionOfTwoArrays.cpp  LC0424-LongestRepeatingCharacterReplacement.cpp  LC0493-ReversePairs.cpp  (+18 more)
BinarySearch/: LC0278-FirstBadVersion.cpp  LC0704-BinarySearch.cpp  SBS0001-FindTheFirstOccurenceOfXinArray.cpp  SBS0002-FindTheLastOccurenceOfXinArray.cpp  SBS0003-CheckifNumberExistsinArray.cpp  SBS0004-FindTheLargestNumerSmallerThanXInArray.cpp  SBS0005-FindTheSmallestNumerGreaterThanXInArray.cpp
BinaryTree/: BinaryTreeUtils.h  LC0098-ValidateBinarySearchTree.cpp  LC0100-SameTree.cpp  (+11 more)
(+96 files in other folders)
